# language-neutral-or-language-specific

./: .gitignore  ERRATA_AND_IMPLEMENTATION_DECISIONS.md  METHOD_RATIONALE.md  README.md  SSOT.md  pyproject.toml
configs/: models.yaml  outputs.yaml  pipeline.yaml  project.yaml  rois.yaml
data/interim/: lppc_run_manifest.parquet  sentence_spans_en.parquet  sentence_spans_fr.parquet  sentence_spans_zh.parquet
data/processed/: alignment_triplets.parquet  alignment_triplets.tsv  alignment_triplets_qc.parquet
docs/: 02_datasets_and_downloads.md  03_models_and_extraction.md  04_alignment_algorithm.md  05_novel_method_and_formulas.md  06_encoding_and_statistics.md  07_figures_tables_and_outputs.md  10_data_contracts.md  15_spec_deviation_log.md
outputs/manuscript/: claim_evidence_map.md  figure_provenance.md  table_provenance.md
outputs/stats/: confirmatory_effects.parquet  geometry_brain_coupling.parquet  geometry_brain_coupling_points.parquet  geometry_metrics.parquet  group_level_roi_results.parquet  robustness_cell_results.parquet  robustness_representative_layers.parquet  robustness_summary.parquet  roi_condition_stats.parquet  roi_family_effect_panels.parquet  subject_level_roi_results.parquet
outputs/tables/: table01_dataset_summary.csv  table02_model_summary.csv  table03_main_confirmatory_stats.csv  (+2 more)
scripts/: 01_bootstrap_repo.sh  02_download_core_data.sh  03_inspect_dataset.sh  04_build_sentence_spans.sh  05_build_alignment_triplets.sh  06_download_model.sh  07_extract_xlmr_pilot.sh  08_extract_xlmr_full.sh  09_build_features.sh  10_extract_roi_targets.sh
(+32 files in other folders)
